<resources>
    <string name="app_name">UHF-ble</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_display">Display Settings</string>
    <string name="title_ip_or_domain">Input Domain/IP</string>
    <string name="title_ping_count">PING Count</string>
    <string name="title_ping_succ">PING Success</string>
    <string name="title_ping_fail">PING failure</string>
    <string name="title_ping_seconds"> s</string>
    <string name="title_ping_background">Background</string>
    <string name="title_ping_wait">Timeout(s)</string>
    <string name="title_ping_restart">Restart</string>
    <string name="title_ping_pingresult">Ping Result</string>
    <string name="title_ping_uploadresult">Upload Result</string>
    <string name="title_ping_downloadresult">Download Result</string>
    <string name="title_start">Start</string>
    <string name="title_stop">Stop</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_set">Settings</string>
    <string name="msg_network_none">Network unavailable</string>
    <string name="msg_network_ok">Network is connected</string>
    <string name="msg_network_unavailable">Network unavailable</string>
    <string name="msg_domain_ip_bad">Domain/IP Error</string>
    <string name="msg_loding">loading...</string>
    <string name="msg_no_data">NO DATA</string>
    <string name="msg_mac_error">ERROR</string>
    <string name="msg_mac_change">CHANGED</string>
    <string name="msg_mac_unmatched">Unmatched</string>
    <string name="app_title">AppCenter %s</string>
    <string name="app_msg_exit_confirm">Again according to the exit</string>
    <string name="upload_title">Upload Tool %s</string>
    <string name="download_title">Download Tool %s</string>
    <string name="action_back">Back</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="connection_mode">Connection Mode:</string>
    <string name="connection_bluetooth">Bluetooth</string>
    <string name="connection_wifi">WiFi</string>
    <string name="label_ip">IP:</string>
    <string name="label_port">Port:</string>
    <string name="dialog_title_prompt">Prompt</string>
    <string name="dialog_msg_switch_connection">Switching connection mode will disconnect the current connection. Continue?</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="msg_feature_bluetooth_only">This feature is only available in Bluetooth mode</string>
    <string name="msg_please_connect_bluetooth">Please connect Bluetooth device</string>
    <string name="msg_please_enter_ip_port">Please enter IP and Port</string>
    <string name="msg_please_enter_ip">Please enter IP address</string>
    <string name="msg_please_enter_port">Please enter port number</string>
    <string name="msg_port_format_error">Port number format error</string>
    <string name="wifi_search_title">Search WiFi Devices</string>
    <string name="wifi_searching">Searching for devices...</string>
    <string name="wifi_search_no_devices">No devices found</string>
    <string name="wifi_udp_error">Failed to start UDP listener</string>
    <string name="wifi_rescan">Rescan</string>
    <string name="wifi_invalid_device">Invalid device information</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="up_one_level">..(up)</string>
    <string name="current_dir">.(refresh)</string>
    <string name="strFilePath">File Path</string>
    <string name="strBrowser">Browse</string>
    <string name="strPermissionDeny">No permission</string>
    <string name="title_activity_download">Download Tool</string>
    <string name="title_activity_upload">Upload Tool</string>
    <string name="title_Ping">Ping</string>
    <string name="title_Download">Download</string>
    <string name="title_Upload">Upload</string>
    <string name="strUpload">Upload</string>
    <string name="title_activity_ping">PingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_ping_packet_size">Packet Size</string>
    <string name="ping_title">Ping Tool %s</string>
    <string name="yid_title">1D Barcode Tool</string>
    <string name="erd_title">2D Barcode Tool</string>
    <string name="title_activity_yi_d">Barcode_1D</string>
    <string name="title_activity_er_d">Barcode_2D</string>
    <string name="title_scan">Scan</string>
    <string name="title_clear">Clear</string>
    <string name="title_init_barcode">init Barcode</string>
    <string name="title_scan_between">Interval</string>
    <string name="yid_title_scan_compare">Compare</string>
    <string name="yid_title_scan_continuous">Auto,interval</string>
    <string name="yid_msg_scan_fail">Scan failure</string>
    <string name="yid_msg_scan_error">Barcode error</string>
    <string name="title_scan_count">total</string>
    <string name="title_succ_count">success</string>
    <string name="title_fail_count">failure</string>
    <string name="title_error_count">error</string>
    <string name="title_error_rate">error</string>
    <string name="title_succ_rate">success</string>
    <string name="title_fail_rate">failure</string>
    <string name="title_activity_bluetooth_print">Bluetooth</string>
    <string name="ble_param_title">BLE Param</string>
    <string name="ble_param_warning_message">⚠️ Warning: Saving parameter changes may cause the device Bluetooth to restart</string>
    <string name="serial_service_warning_change_tip">Serial services can\'t be turned off</string>
    <string name="ble_param_bluetooth_name">Bluetooth Name</string>
    <string name="ble_param_baudrate">Baudrate</string>
    <string name="ble_param_pin_code">PIN Code</string>
    <string name="ble_param_bluetooth_mac">Bluetooth MAC</string>
    <string name="ble_param_keyboard_type">Keyboard Type</string>
    <string name="ble_param_hid_interval">HID Char Interval (ms)</string>
    <string name="ble_param_pair_property">Pair Property</string>
    <string name="ble_param_bluetooth_info">Bluetooth Info</string>
    <string name="ble_param_hardware_version">Hardware Version</string>
    <string name="ble_param_firmware_version">Firmware Version</string>
    <string name="ble_param_software_version">Software Version</string>
    <string name="ble_param_manufacturer">Manufacturer</string>
    <string name="ble_param_keyboard_service">Keyboard Service</string>
    <string name="ble_param_serial_service">Serial Service</string>
    <string name="ble_param_set">Set</string>
    <string name="ble_param_get">Get</string>
    <string name="ble_param_get_info">Get Info</string>
    <string name="ble_param_remove_bond">Remove Bond</string>
    <string name="ble_param_restore_default">Restore Default</string>
    <string name="ble_param_bound">Bound</string>
    <string name="ble_param_unbound">Unbound</string>
    <string name="ble_param_supported">Supported</string>
    <string name="ble_param_not_supported">Not Supported</string>
    <string name="ble_param_set_success">Set successfully</string>
    <string name="ble_param_set_failed">Set failed</string>
    <string name="ble_param_get_success">Get successfully</string>
    <string name="inventory_rate">Rate:</string>
    <string name="ble_param_get_failed">Get failed</string>
    <string name="ble_param_operation_success">Operation successful</string>
    <string name="ble_param_operation_failed">Operation failed</string>
    <string name="ble_param_pin_hint">6 digits PIN</string>
    <string name="ble_param_name_hint">Enter bluetooth name</string>
    <string name="ble_param_interval_hint">Interval (ms)</string>
    <string name="ble_param_post_connection_time">Post-Connection Time (ms)</string>
    <string name="ble_param_min_connection_time">Min Connection Time (ms)</string>
    <string name="ble_param_max_connection_time">Max Connection Time (ms)</string>
    <string name="ble_param_min_send_time">Min Send Time (ms)</string>
    <string name="ble_param_bluetooth_services">Bluetooth Services</string>
    <string name="ble_param_time_hint">Time (ms)</string>
    <string name="ble_param_get_services">Get Services</string>
    <string name="ble_param_set_services">Set Services</string>
    <string-array name="ble_param_keyboard_types">
        <item>US</item>
        <item>DEU</item>
        <item>FRA</item>
        <item>ESP</item>
        <item>POR</item>
        <item>Italy</item>
        <item>Belgian</item>
    </string-array>
    <string-array name="ble_param_baudrates">
        <item>115200</item>
        <item>460800</item>
        <item>921600</item>
    </string-array>
    <string-array name="baudrate_selection">
        <item>115200</item>
        <item>460800</item>
    </string-array>
    <string name="send">Send</string>
    <string name="Print">Print</string>
    <string name="Clear">Clear</string>
    <string name="not_connected">Please connect the bluetooth printer</string>
    <string name="bt_not_enabled_leaving">Please select a device!!</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected: </string>
    <string name="title_not_connected">Not connected</string>
    <string name="default_font_gray_scale">4</string>
    <string name="fontGrayscaleName">Grayscale</string>
    <string name="fontGrayScaleRange">(1~8)</string>
    <string name="PrintContent"> HELLO WORLD! \n</string>
    <string name="rfid_mgs_erase_fail">Erase fail</string>
    <string name="rfid_mgs_erase_succ">Erase succ</string>
    <string name="scanning">Scanning...</string>
    <string name="select_device">Select a device</string>
    <string name="none_paired">No Matching</string>
    <string name="none_found">Not found</string>
    <string name="title_paired_devices">Matched</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan</string>
    <string name="title_activity_uhfmain">UHF</string>
    <string name="tvInventoryName">Inventory Tag</string>
    <string name="tvCountOfTags">Total&#160;&#160;</string>
    <string name="rbInventorySingle">Single</string>
    <string name="rbInventoryLoop">Auto</string>
    <string name="rbInventoryAnti">Anti</string>
    <string name="tvQ">Q value：</string>
    <string name="btInventory">Start</string>
    <string name="title_stop_Inventory">Stop</string>
    <string name="tvTagEPC">EPC</string>
    <string name="tvTagLen">Length</string>
    <string name="tvTagCount">Count</string>
    <string name="btClear">Clear</string>
    <string name="second">s</string>
    <string name="workTime">WorkTime</string>
    <string name="Connect">Connect</string>
    <string name="title_search">Search</string>
    <string name="btnGetWifiMode">Get</string>
    <string name="btnSetWifiMode">Set</string>
    <string name="txtWifiMode">Wifi Mode:</string>
    <string name="btnGetSSIDAndPWD">Get</string>
    <string name="btnSetSSIDAndPWD">Set</string>
    <string name="readerPort">Reader Port</string>
    <string name="getIPAndPort">Get Port</string>
    <string name="setIPAndPort">Set Port</string>
    <string name="btnGetWifiList">Get Wifi List</string>
    <string name="msgIP">IP</string>
    <string name="msgGateway">Gateway</string>
    <string name="msgSubnetMask">SubnetMask</string>
    <string name="msgDNS">DNS</string>
    <string name="btnGetIP">Get</string>
    <string name="btnSetIP">Set</string>
</resources>